# Gabe-Burke-Agentic-AI-Tools

./: .gitignore  Dockerfile  README.md  app.py  config.py  feedback.txt  pyproject.toml  requirements.txt  sample.json  test_import.py  ui-main.py
agents/: data_agent.py
app/data/: Office Attedance Data.xlsx
app/notebook/: test.ipynb
app/service/: test.py
test-code/: agent-config.py  main.py
utils/: data_loader.py  insights.py  styling.py  visualizations.py
