[project]
name = "gabe-burke-agentic-ai-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-openai>=1.0.1",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pyarrow>=17.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "streamlit>=1.39.0",
    "watchdog>=3.0.0",
]
